<resources>
    <string name="app_name">KoshelOK</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">Тут вы сможете контролировать свои доходы и расходы</string>
    <string name="welcome_message">Добро пожаловать в КошелОК</string>
    <string name="sign_in_with_google_text">Войти с помощью Google</string>
    <string name="test_wallet_name">Кошелек 1</string>
    <string name="test_wallet_balance">0 ₽</string>
    <string name="income_text">Доход</string>
    <string name="income_value_test_text">0 ₽</string>
    <string name="costs_text">Расходы</string>
    <string name="test_costs_value">0 ₽</string>
    <string name="add_operation_text">Добавить операцию</string>
    <string name="no_operations_message">У вас пока нет записей</string>
    <string name="costs_identifier_icon">Costs identifier icon</string>
    <string name="income_identifier_icon">Income identifier icon</string>
    <string name="welcome_image">Welcome image</string>
    <string name="operation_value_text">Сумма операции</string>
    <string name="next_text">Далее</string>
    <string name="category_icon_text">Иконка категории</string>
    <string name="test_category_name">Тестовая</string>
    <string name="is_category_checked_text">Выбрана ли категория</string>
    <string name="text_income">Доход</string>
    <string name="text_costs">Расход</string>
    <string name="attribute_text">Attribute</string>
    <string name="attribute_value">Value</string>
    <string name="main_attributes">Основные</string>
    <string name="additionalAttributes">Дополнительные настройки</string>
    <string name="salary">Зарплата</string>
    <string name="part_time">Подработка</string>
    <string name="gift">Подарок</string>
    <string name="capitalization">Капитализация</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="supermarket">Супермаркет</string>
    <string name="value_text">Сумма</string>
    <string name="type_text">Тип</string>
    <string name="category_text">Категория</string>
    <string name="operation_date_text">Дата операции</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="sure_delete">Уверены что хотите удалить запись?</string>
    <string name="cancel">Отменить</string>
    <string name="delete">Удалить</string>
    <string name="delete_dialog_tag">deleteDialog</string>
    <string name="choose_operation_type">Выберите тип операции</string>
    <string name="new_operation">Новая операция</string>
    <string name="no_entries">У вас пока нет записей</string>
    <string name="total_sum">Общий баланс</string>
    <string name="total_income">Общий доход</string>
    <string name="total_expenditure">Общие расходы</string>
    <string name="create_wallet">Создать кошелек</string>
    <string name="category">Category</string>
    <string name="is_category_checked">Is category checked</string>
    <string name="network_error_message">Нет соединения с сервером</string>
    <string name="network_error_icon">Network error icon</string>
    <string name="something_went_wrong_text">Что-то пошло не так</string>
    <string name="restaurants">Рестораны</string>
    <string name="sport">Спортзалы</string>
    <string name="public_transport">Общественный транспорт</string>
    <string name="pharmacy">Медицина</string>
    <string name="gas_station">Бензин</string>
    <string name="rent">Кварплата</string>
    <string name="travel">Отдых</string>
    <string name="no_wallets_yet">У вас пока нет созданных кошельков</string>
    <string name="wallet_name_entry">Название кошелька</string>
    <string name="setup_wallet_name">Придумайте название</string>
    <string name="next">Далее</string>
    <string name="enter_name">Введите название</string>
    <string name="enter_sum_suggest">Введите сумму операции</string>
    <string name="wallet_name_title">Название</string>
    <string name="currency">Валюта</string>
    <string name="limit">Лимит</string>
    <string name="new_wallet">Новый кошелек</string>
    <string name="save">Сохранить</string>
    <string name="limit_description">Лимит на траты</string>
    <string name="show_more">Показать больше</string>
    <string name="hide_show_more">Свернуть</string>
    <string name="hidden_wallets">Скрытые кошельки</string>
    <string name="create_category">Создать категорию</string>
    <string name="icon">Иконка</string>
    <string name="create_color">Задать цвет</string>
    <string name="avia">Авиа</string>
    <string name="jewelery">Ювелирное</string>
    <string name="pharmancy">Аптека</string>
    <string name="cafe">Кафе</string>
    <string name="svyaz">Связь</string>
    <string name="theatre">Театр</string>
    <string name="train">Метро</string>
    <string name="pets">Животные</string>
    <string name="inernet">Интернет</string>
    <string name="charity">"Благотворительность "</string>
    <string name="music">Музыка</string>
    <string name="servicies">Сервисы</string>
    <string name="mobile">Телефон</string>
    <string name="home">Ремонт</string>
    <string name="cinema">Кино</string>
    <string name="car">Машина</string>
    <string name="medicine">Медицина</string>
    <string name="education">Образование</string>
    <string name="tv">Телевидение</string>
    <string name="wallet">Кошелек</string>
    <string name="clothing">Одежда</string>
    <string name="finance">Финансы</string>
    <string name="entertainment">Развлечения</string>
    <string name="other">Другое</string>
    <string name="new_category">Новая категория</string>
    <string name="not_setup">Не установлен</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="remove">Удалить</string>
    <string name="limit_overcome">Превышен лимит</string>
    <string name="standard_currency_code">USD</string>
    <string name="standard_currency_name">Доллар США</string>
    <string name="wallet_edit">Редактирование кошелька</string>
    <string name="wrong_time_message">Неверная дата, доступна запись транзакций в прошлом времени</string>
    <string name="auth_error_message">Ошибка авторизация, попробуйте снова</string>
    <string name="limit_is_over_message">Вы превысили лимит на траты</string>
    <string name="limit_error_message">Расходы первышают лимит , установите лимит больше</string>
    <string name="OK">ОК</string>
    <string name="update">Обновить</string>

</resources>