<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/AppSelectableItem"
    android:layout_height="56dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/category_dot"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/category_icon_text"
        android:src="@color/black"
        />

    <ImageView
        android:id="@+id/category_image_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:contentDescription="@string/category_icon_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_costs_dot" />

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/test_category_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/category_dot"
        app:layout_constraintStart_toEndOf="@+id/category_dot"
        app:layout_constraintTop_toTopOf="@+id/category_dot" />

    <ImageView
        android:id="@+id/isCategoryChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_checked"
        android:contentDescription="@string/is_category_checked_text" />
</androidx.constraintlayout.widget.ConstraintLayout>