<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.ui.walletoperation.WalletOperationFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">


  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/startGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="16dp" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/endGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="16dp" />

  <TextView
      android:id="@+id/walletName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/test_wallet_name"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintStart_toStartOf="@+id/startGuideline"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/walletBalance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/test_wallet_balance"
      android:textColor="@color/black"
      android:textSize="32sp"
      app:layout_constraintStart_toEndOf="@id/startGuideline"
      app:layout_constraintTop_toBottomOf="@id/walletName" />


  <include
      android:id="@+id/include"
      layout="@layout/wallet_income_plate"
      android:layout_width="0dp"
      android:layout_height="79dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="4dp"
      app:layout_constraintEnd_toEndOf="@id/centerGuideline"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="@id/startGuideline"
      app:layout_constraintTop_toBottomOf="@id/walletBalance" />

  <include
      layout="@layout/wallet_costs_plate"
      android:layout_width="0dp"
      android:layout_height="79dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="@id/endGuideline"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="@id/centerGuideline"
      app:layout_constraintTop_toBottomOf="@id/walletBalance" />


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/buttonAddOperation"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:background="@drawable/active_button_back_with_corner_radius"
      android:text="@string/add_operation_text"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/centerGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="206dp" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/wallet_recycle"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="8dp"
      app:layout_constraintBottom_toTopOf="@+id/buttonAddOperation"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline"
      app:layout_constraintTop_toBottomOf="@+id/include" />



 </androidx.constraintlayout.widget.ConstraintLayout>
